# yolo_fall_down

./: .gitignore  README.md  config.yaml  frp.toml  main.py  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  deps.py  detection_runner.py  detector.py  models.py  schemas.py  shared_capture.py  stream_reader.py  test_stream.py  ws_manager.py
app/routers/: alerts.py  auth.py  cameras.py  health.py  streams.py  tasks.py  ws.py
front/: index.html  package-lock.json  package.json
front/src/: styles.css
front/src/api/: auth.js  fall.js  video.js
front/src/components/: CameraPanel.vue  ConfigPanel.vue  LoginPanel.vue  TaskAlertsPanel.vue  ToastMessage.vue  TopBar.vue  VideoPreview.vue
front/src/composables/: useFallWs.js  useToast.js
front/src/pages/: FallConsole.vue  LoginPage.vue
front/src/router/: index.js
front/src/store/: auth.js
front/src/utils/: auth.js  crypto.js  time.js
train/: train.py  train.yaml
